--- a/blueprints/controllers/ikea_e1524_e1810/ikea_e1524_e1810.yaml
+++ b/blueprints/controllers/ikea_e1524_e1810/ikea_e1524_e1810.yaml
@@ -16,7 +16,7 @@ blueprint:
     🚀 This blueprint is part of the **[Awesome HA Blueprints](https://epmatt.github.io/awesome-ha-blueprints) project**.
 
     ℹ️ Version 2022.08.08
-  source_url: https://github.com/EPMatt/awesome-ha-blueprints/blob/main/blueprints/controllers/ikea_e1524_e1810/ikea_e1524_e1810.yaml
+  source_url: https://github.com/javiermoro/awesome-ha-blueprints/blob/main/blueprints/controllers/ikea_e1524_e1810/ikea_e1524_e1810.yaml
   domain: automation
   input:
     integration:
@@ -341,10 +341,10 @@ variables:
       button_right_short: [press_256_13_0]
       button_right_long: [hold_3328_0]
       button_right_release: [release]
-      button_up_short: [step_with_on_off_0_43_5]
+      button_up_short: [step_with_on_off_StepMode.Up_43_5]
       button_up_long: [move_with_on_off_0_83, move_with_on_off_0_84]
       button_up_release: [stop]
-      button_down_short: [step_1_43_5]
+      button_down_short: [step_StepMode.Down_43_5]
       button_down_long: [move_1_83, move_1_84]
       button_down_release: [stop]
       button_center_short: [toggle]
